--- a/appspec.yml
+++ b/appspec.yml
@@ -1,13 +1,22 @@
 version: 0.0
-os: linux	
-files:	
-  - source: /index.html	  
-    destination: /var/www/html/	    
-hooks:	
-  BeforeInstall:	 
-    - location: scripts/install_dependencies	   
-      timeout: 300	     
-      runas: root	     
-    - location: scripts/start_server	    
-      timeout: 300	     
-      runas: root	      
+os: linux
+files:
+  - source: Config/config.txt
+    destination: /webapps/Config
+  - source: source
+    destination: /webapps/myApp
+hooks:
+  BeforeInstall:
+    - location: Scripts/UnzipResourceBundle.sh
+    - location: Scripts/UnzipDataBundle.sh
+  AfterInstall:
+    - location: Scripts/RunResourceTests.sh
+      timeout: 180
+  ApplicationStart:
+    - location: Scripts/RunFunctionalTests.sh
+      timeout: 3600
+  ValidateService:
+    - location: Scripts/MonitorService.sh
+      timeout: 3600
+      runas: codedeployuser
+
